Revision history for firebird_fdw

1.3.0	2022-??-??

1.2.3	2022-02-11
	- Fix bug in rescan handling
	- Adapt TAP tests to support PostgreSQL 15

1.2.2	2021-09-15
	- Invalid Firebird server port numbers will be rejected
	- Enable provision of custom Firebird port for TAP tests
	- Support PostgreSQL 14
	- Adapt for API changes introduced in PostgreSQL 11+
	- Support for versions earlier than PostgreSQL 9.3 removed
	- Ensure non-superusers can execute firebird_version()

1.2.1	2020-10-21
	- Fix builds for recent Fedora versions

1.2.0	2020-10-17
	- Add support for PostgreSQL 13
	- Add support for generated columns (PostgreSQL 12 and later)
	- Add support for COPY and partition tuple routing (PostgreSQL 11 and later)
	- Add table/column option "quote_identifier"
	- Add server option "quote_identifiers"
	- Have IMPORT FOREIGN SCHEMA add "quote_identifier" where appropriate
	- Add support for implicit boolean columns
	- Push down boolean tests in WHERE clauses where possible
	- Add function firebird_fdw_server_options()
	- Add function firebird_version()
	- When analyzing a foreign table, only retrieve the columns defined in
	  that table
	- Have EXPLAIN for a remote modify show the Firebird query used
	- If a remote query fails, log the query as CONTEXT
	- Explicitly reject INSERT with ON CONFLICT clause
	- Fix UPDATE statements where a BEFORE ROW UPDATE trigger is present
	- Apply CREATE SERVER's "port" option, if provided
	- Prevent tables defined as queries from being set as "updatable = 'true'"

1.1.0	2019-05-31
	- Add utility function "firebird_fdw_close_connections()"
	- Add utility function "firebird_fdw_diag()"
	- Adapt code to deal with tuple-level OID removal in PostgreSQL 12
	- Support for heap access method changes in PostgreSQL 12

1.0.0	2018-11-09
	- Support Firebird BOOLEAN datatype (Firebird 3.0 and later)
	- Improve "IMPORT FOREIGN SCHEMA" implementation
	- Add table option "estimated_row_count"